# fruit-fly-exploration

./: README.md  comp7703_assignment_2_report.docx  export_report_pdf.sh  fruit_fly_report.docx  notes.txt  ~$mp7703_assignment_2_report.docx
solutions/: Prac_W8_Q5-simple-Copy1.ipynb  convolutional_neural_nets.md  data_cleaning.ipynb  data_exploration.ipynb  decision_tree_exploration.ipynb  neural_network_exploration.ipynb  plot_cardinality_performance.ipynb  pyproject.toml  softmax_exploration.ipynb
solutions/.ipynb_checkpoints/: Prac_W8_Q5-simple-checkpoint.ipynb  data_cleaning-checkpoint.ipynb  data_exploration-checkpoint.ipynb  neural_network_exploration-checkpoint.ipynb  softmax_exploration-checkpoint.ipynb
solutions/Population/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
solutions/Population-Sex/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
solutions/Population-Sex/.ipynb_checkpoints/: decision_tree_exploration-checkpoint.ipynb
solutions/Sex/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
solutions/Sex/.ipynb_checkpoints/: softmax_exploration-checkpoint.ipynb  (+2 more)
solutions/Species/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
solutions/Species-Population/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
solutions/Species-Sex/: decision_tree_exploration.ipynb  neural_network_exploration.ipynb  softmax_exploration.ipynb
(+89 files in other folders)
